Terraform/alb.tf
resource "aws_lb" "app_lb" {
    name = " app-loadbalancer"
    load_balancer_type = "application"
    subnets = [
        aws_subnet.public_1.id ,
        aws_subnet.public_2.id
    ]

    security_groups = [aws_security_group.alg_sg.id]
  
}

resource "aws_lb_target_group" "app_tg" {

    name = "app-target-group"
    port = 80
    protocol = "HTTP"
    vpc_id = aws_vpc.main.id
  
}

resource "aws_lb_listener" "http" {
     load_balancer_arn = aws_lb.app_lb.arn
     port = 80
     protocol = "HTTP" 

     default_action {
        type = "forward"
        target_group_arn = aws_lb_target_group.app_tg.arn
     } 
}
